# XJTU-RMV-Task03

./: CMakeLists.txt  README.md  main.cpp  nohup1.out  nohup2.out  test_Gradient.txt  test_anglespeed.txt
src/: windmill.cpp
